add_custom_command: regression in DEPENDS on relative path
The change in !4148 (merged) broke this case:
$ cat ../CMakeLists.txt
cmake_minimum_required(VERSION 3.16)
project(CustomDepend NONE)
add_custom_command(
OUTPUT out.txt
COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/in/in.txt out.txt
DEPENDS in/in.txt
VERBATIM
)
add_custom_target(drive ALL DEPENDS out.txt)
$ cmake .. -GNinja
...
$ ninja
...
ninja: error: 'in/in.txt', needed by 'out.txt', missing and no known rule to make it